@@ -87,7 +87,7 @@
     library that must be installed first. Of course, a gawk 4.1+ is required
     in all cases. Extension packages are distributed mainly as source code
     archives.</p><p>Please check the availability of gawk, and install or
-    upgraded it if necessary. Then download and build the <i>gawkextlib</i>
+    upgrade it if necessary. Then download and build the <i>gawkextlib</i>
     base library, if required. And finally download and build the desired
     extension. The "<a href="README.html">How to install</a>" document gives
     detailed instructions for the process.</p><h2>How to get help and give
@@ -95,7 +95,7 @@
     href="https://sourceforge.net/p/gawkextlib/mailman">gawkextlib-users</a>
     mailing list. Free to read, but requires subscription to post messages. An
     alternative for people that really hate to subscribe is the more general
-    <a href="news:comp.lang.ada">comp.lang.awk</a> newsgroup.</p><p>Questions,
+    <a href="news:comp.lang.awk">comp.lang.awk</a> newsgroup.</p><p>Questions,
     comments, suggestions, bug reports, etc. are welcome. Please read previous
     posts related to the topic before sending a new message.</p><h2>How to
     contribute</h2><p>New extensions are welcome! As well as enhancements of
