@@ -6,7 +6,7 @@
 
     <title>@TITLE@</title>
 
-    <link href="auk.ico" rel="shortcut icon" />
+    <link href="../auk.ico" rel="shortcut icon" />
 
     <link href="../gawkextlib.css" rel="StyleSheet" type="text/css" />
   </head>
