@@ -1,5 +1,7 @@
 gawk-abort: abort extension of GNU awk
 
+--> COPYING
+
 Description
 <- README
 
