@@ -1,5 +1,7 @@
 gawk-errno: ERRNO extension of GNU awk
 
+--> COPYING
+
 Description
 <- README
 
