@@ -1,5 +1,7 @@
 gawk-gd: GD extension of GNU awk
 
+--> COPYING
+
 Description
 <- README
 
