@@ -1,5 +1,7 @@
 gawk-haru: Haru extension of GNU awk
 
+--> COPYING
+
 Description
 <- README
 
