@@ -1,5 +1,7 @@
 gawk-json: JSON extension of GNU awk
 
+--> COPYING
+
 Description
 <- README
 
