@@ -1,5 +1,7 @@
 gawextlib: Base library for gawkextlib extensions
 
+--> COPYING
+
 Description
 <- README
 
