@@ -1,5 +1,7 @@
 gawk-select: 'select' extension of GNU awk
 
+--> COPYING
+
 Description
 <- README
 
