@@ -1,5 +1,7 @@
 gawk-xml: XML extension of GNU awk
 
+--> COPYING
+
 Description
 <- README
 
