@@ -1,3 +1,7 @@
+2018-04-09         Manuel Collado        <m-collado@users.sourceforge.net>
+
+	* csv*.{texi,3am}: Force rebuild.
+
 2018-04-07         Manuel Collado        <m-collado@users.sourceforge.net>
 
 	* csvparse.xhtml: fix errata.
