@@ -1,3 +1,7 @@
+2018-04-09         Manuel Collado       <m-collado@users.sourceforge.net>
+
+	* */webTOC: Fix COPYING omission.
+
 2018-04-08         Manuel Collado       <m-collado@users.sourceforge.net>
 
 	* webTOC: Global rebuild of the home page.
